feat: dark/light mode

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // Immediately set theme - Prevent flash of unstyled content
+      const theme = localStorage.getItem("vite-ui-theme");
+      if (theme === "dark" || (!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.add("light");
+      }
+    </script>
   </body>
 </html>
